--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "static-site-example",
+  "name": "Rocket.Chat.Docs.Generator",
   "private": true,
   "dependencies": {
     "async": "^2.0.0-rc.5",
