--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "metalsmith-layouts": "^1.7.0",
     "metalsmith-less": "^2.0.0",
     "metalsmith-markdown": "^0.2.1",
+    "metalsmith-redirect": "^2.1.0",
     "metalsmith-slug": "^0.2.0",
     "path": "^0.12.7",
     "serve-static": "^1.11.0",
